<resources>
    <string name="app_name">MVVM-Architecture</string>
    <string name="action_ok_en">OK</string>
    <string name="action_no_en">No</string>
    <string name="msg_error_time_out">Connection timeout!</string>
    <string name="msg_error_no_internet">Not connect internet!</string>
    <string name="msg_error_data_parse">Parse data error!</string>
    <string name="tv_scan">Scan</string>
    <string name="tv_stop">Stop</string>
    <string name="trending">Trending</string>
    <string name="scan">Scan</string>
    <string name="gallery">Gallery</string>
    <string name="title_appbar_main">Trending Video</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="try_now">TRY NOW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="bright">Bright</string>
    <string name="timer">Timer</string>
    <string name="line_speed">Line Speed</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="time_warp">Time Warp</string>
    <string name="ver_1_0_0">Ver 1.0.0</string>
    <string name="removeAds">Remove ads</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback_amp_report"><![CDATA[Feedback & Report]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="emptyText" />
</resources>