<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clScanRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_300">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuidelineVertical0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuidelineVertical0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuidelineHorizontal0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.thuanpx.mvvm_architecture.feature.scan.Camera2SurfaceView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCameraScreenBack"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/gray_300"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewRemoveAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/GuidelineVertical0.9"
        app:layout_constraintEnd_toEndOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@id/GuidelineVertical0.9">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnRemoveAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintBottom_toBottomOf="@id/viewRemoveAds"
            app:layout_constraintEnd_toEndOf="@id/viewRemoveAds"
            app:layout_constraintStart_toStartOf="@id/viewRemoveAds"
            app:layout_constraintTop_toTopOf="@+id/viewRemoveAds" />

        <TextView
            android:id="@+id/tvRemoveAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_icon_font"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/remove_ads"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnRemoveAds"
            app:layout_constraintStart_toStartOf="@id/btnRemoveAds"
            app:layout_constraintTop_toBottomOf="@id/btnRemoveAds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewBright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintTop_toBottomOf="@+id/viewRemoveAds">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintBottom_toBottomOf="@id/viewBright"
            app:layout_constraintEnd_toEndOf="@id/viewBright"
            app:layout_constraintStart_toStartOf="@id/viewBright"
            app:layout_constraintTop_toTopOf="@+id/viewBright" />

        <TextView
            android:id="@+id/tvBright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_icon_font"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/bright"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnBright"
            app:layout_constraintStart_toStartOf="@id/btnBright"
            app:layout_constraintTop_toBottomOf="@id/btnBright" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintTop_toBottomOf="@+id/viewBright">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/gray_300"
            android:paddingTop="@dimen/dp_5"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintEnd_toEndOf="@id/viewTimer"
            app:layout_constraintStart_toStartOf="@id/viewTimer"
            app:layout_constraintTop_toTopOf="@+id/viewTimer" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_icon_font"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/timer"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnTimer"
            app:layout_constraintStart_toStartOf="@id/btnTimer"
            app:layout_constraintTop_toBottomOf="@id/btnTimer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewLineSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintTop_toBottomOf="@+id/viewTimer">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnLineSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintBottom_toBottomOf="@id/viewLineSpeed"
            app:layout_constraintEnd_toEndOf="@id/viewLineSpeed"
            app:layout_constraintStart_toStartOf="@id/viewLineSpeed"
            app:layout_constraintTop_toTopOf="@+id/viewLineSpeed" />

        <TextView
            android:id="@+id/tvLineSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_icon_font"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/line_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnLineSpeed"
            app:layout_constraintStart_toStartOf="@id/btnLineSpeed"
            app:layout_constraintTop_toBottomOf="@id/btnLineSpeed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnChangeCamera"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@android:color/transparent"
        android:src="@drawable/btn_change_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:background="@drawable/shape_image_photo"
        android:src="@drawable/ic_take_photo"
        app:layout_constraintBottom_toBottomOf="@id/GuidelineHorizontal0.9"
        app:layout_constraintEnd_toEndOf="@id/GuidelineVertical0.5"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.5"
        app:layout_constraintTop_toTopOf="@id/GuidelineHorizontal0.9" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/collectionImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:src="@drawable/ic_temp_photo"
        app:layout_constraintBottom_toBottomOf="@id/btnChangeCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnChangeCamera" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:fontFamily="@font/text_icon_font"
        android:text="@string/photo"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/GuidelineVertical0.5"
        app:layout_constraintStart_toStartOf="@id/GuidelineVertical0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvScan"
        android:layout_width="@dimen/dp_228"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@+id/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="@id/GuidelineVertical0.5"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.5"
        app:strokeColor="@android:color/transparent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:backgroundTint="@android:color/white"
            app:tabBackground="@drawable/tabs_selector"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextAppearance="@style/CustomTabTextAppearance"
            app:tabTextColor="@android:color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:background="@drawable/shape_image_photo"
        android:padding="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@id/GuidelineHorizontal0.9"
        app:layout_constraintStart_toEndOf="@+id/btnTakePhoto"
        app:layout_constraintTop_toTopOf="@id/GuidelineHorizontal0.9">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/btnTakeVideo"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:background="@drawable/btn_take_video"
            android:checked="false"
            android:textOff="@string/emptyText"
            android:textOn="@string/emptyText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>