<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_300"
    tools:context=".BlankFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuidelineVertical0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuidelineVertical0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuidelineHorizontal0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.thuanpx.mvvm_architecture.feature.scan.Camera2SurfaceView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnCameraScreenBack"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:backgroundTint="@color/gray_300"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewRemoveAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/GuidelineVertical0.9"
        app:layout_constraintEnd_toEndOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@id/GuidelineVertical0.9">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnRemoveAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:backgroundTint="@color/gray_300"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintBottom_toBottomOf="@id/viewRemoveAds"
            app:layout_constraintEnd_toEndOf="@id/viewRemoveAds"
            app:layout_constraintStart_toStartOf="@id/viewRemoveAds"
            app:layout_constraintTop_toTopOf="@+id/viewRemoveAds" />

        <TextView
            android:id="@+id/tvRemoveAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/remove_ads"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnRemoveAds"
            app:layout_constraintStart_toStartOf="@id/btnRemoveAds"
            app:layout_constraintTop_toBottomOf="@id/btnRemoveAds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewBright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintTop_toBottomOf="@+id/viewRemoveAds">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_300"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintBottom_toBottomOf="@id/viewBright"
            app:layout_constraintEnd_toEndOf="@id/viewBright"
            app:layout_constraintStart_toStartOf="@id/viewBright"
            app:layout_constraintTop_toTopOf="@+id/viewBright" />

        <TextView
            android:id="@+id/tvBright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/bright"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnBright"
            app:layout_constraintStart_toStartOf="@id/btnBright"
            app:layout_constraintTop_toBottomOf="@id/btnBright" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintTop_toBottomOf="@+id/viewBright">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:backgroundTint="@color/gray_300"
            android:paddingTop="@dimen/dp_5"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintEnd_toEndOf="@id/viewTimer"
            app:layout_constraintStart_toStartOf="@id/viewTimer"
            app:layout_constraintTop_toTopOf="@+id/viewTimer" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/timer"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnTimer"
            app:layout_constraintStart_toStartOf="@id/btnTimer"
            app:layout_constraintTop_toBottomOf="@id/btnTimer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewLineSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintTop_toBottomOf="@+id/viewTimer">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnLineSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_300"
            android:src="@drawable/ic_common_temporary"
            app:layout_constraintBottom_toBottomOf="@id/viewLineSpeed"
            app:layout_constraintEnd_toEndOf="@id/viewLineSpeed"
            app:layout_constraintStart_toStartOf="@id/viewLineSpeed"
            app:layout_constraintTop_toTopOf="@+id/viewLineSpeed" />

        <TextView
            android:id="@+id/tvLineSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/line_speed"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="@+id/btnLineSpeed"
            app:layout_constraintStart_toStartOf="@id/btnLineSpeed"
            app:layout_constraintTop_toBottomOf="@id/btnLineSpeed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivChangeStyleCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:backgroundTint="@color/gray_300"
        android:src="@drawable/ic_change_style_cam"
        app:layout_constraintBottom_toTopOf="@+id/ivTakePhoto"
        app:layout_constraintEnd_toEndOf="@id/GuidelineVertical0.5"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivChangeCamera"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_10"
        android:backgroundTint="@color/gray_300"
        android:src="@drawable/btn_change_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineVertical0.9"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.9" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTakePhoto"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:background="?selectableItemBackgroundBorderless"
        android:backgroundTint="@color/gray_300"
        app:layout_constraintBottom_toBottomOf="@id/GuidelineHorizontal0.9"
        app:layout_constraintEnd_toEndOf="@id/GuidelineVertical0.5"
        app:layout_constraintStart_toStartOf="@+id/GuidelineVertical0.5"
        app:layout_constraintTop_toTopOf="@id/GuidelineHorizontal0.9"
        app:srcCompat="@drawable/btn_take_photo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTakeVideo"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_10"
        android:backgroundTint="@color/gray_300"
        app:layout_constraintBottom_toBottomOf="@id/GuidelineHorizontal0.9"
        app:layout_constraintStart_toEndOf="@+id/ivTakePhoto"
        app:layout_constraintTop_toTopOf="@id/GuidelineHorizontal0.9"
        app:srcCompat="@drawable/btn_take_video" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_temp_photo"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@id/ivChangeCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivChangeCamera" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/photo"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/GuidelineVertical0.5"
        app:layout_constraintStart_toStartOf="@id/GuidelineVertical0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>